apps/tool/traefik-30050-config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-30050
  namespace: kube-system
spec:
  type: NodePort
  ports:
    - name: web-30050
      port: 30050
      targetPort: 30050
      nodePort: 30050
      protocol: TCP
  selector:
    app.kubernetes.io/name: traefik
